2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-01-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* yencode.test: More boilerplate simplified via use of test support.
	* uuencode.test:
	* base64.test:

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* yencode.test: Hooked into the new common test support code.
	* uuencode.test:
	* base64.test:

2005-10-18  Andreas Kupries <andreask@activestate.com>

	* base64.bench:   Basic benchmarks for base64, uuencode,
	* uuencode.bench: and yencode. Encode/decode of strings
	* yencode.bench:  only.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-08-26  Andreas Kupries <andreask@activestate.com>

	* uuencode.test: Deconfused the testsuite's belief of which
	  accelerators is in use. Removed superfluous output, and added a
	  flag variable for actual use of Trf, not only presence. Changed
	  definition of test 1.4 to use this flag. This is for [Tcllib SF
	  Bug 1273537].

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* base64.man: Cleaned the doc up a bit. Especially highlighted the
	  recently added note recording binary by separating it from the
	  general description a bit (same location, new paragraph).

2005-02-17  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* base64.man: Added some examples and attempted to point out that
	proper string encoding may be needed for unicode strings.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-08-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* base64.tcl: Typo police.
	* uuencode.tcl:
	* uuencode.man:
	* yencode.man:

2004-07-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>
